# cutie_patootie

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/static/: frontend-224f8d51c7bdeacc.js  frontend-224f8d51c7bdeacc_bg.wasm  frontend-4c1383ad8f44b5e5_bg.wasm  frontend-840254dc959bad7f.js  frontend-840254dc959bad7f_bg.wasm  frontend-8f25f0c14ec09fc0_bg.wasm  index.html
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: lib.rs  routes.rs
frontend/src/components/: audio_player.rs  confetti.rs  mod.rs
frontend/src/js/: confetti_wrapper.js
frontend/src/pages/: anxious.rs  bad_day.rs  bored.rs  butterflies.rs  confused.rs  cuddle.rs  distraction.rs  good_day.rs  headache.rs  home.rs  hug.rs  insecure.rs  lonely.rs  love.rs  missing.rs  mod.rs  overwhelmed.rs  rainy.rs  sad.rs  self_doubt.rs  sleepy.rs  story.rs  text.rs
