[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
gloo = { version = "0.11", features = ["events"] }
web-sys = { version = "0.3", features = ["HtmlAudioElement"] }
wasm-bindgen = "0.2"
